# bde

./: CMakeLists.txt  CMakePresets.json  Readme.md
cmake/layers/: ufid.cmake
groups/bal/baljsn/: baljsn_parserutil.t.cpp
groups/bdl/bdlc/: bdlc_flathashtable.h  bdlc_flathashtable.t.cpp
groups/bdl/bdlm/: bdlm_metricdescriptor.cpp
groups/bsl/bsl+bslhdrs/: bsl_ostream.h
groups/bsl/bslfmt/: bslfmt_streamed.t.cpp
